# roz-oss

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  NOTICE  README.md  SECURITY.md  deny.toml  fly.api-dev.toml
crates/roz-agent/: Cargo.toml
crates/roz-agent/src/: agent_loop.rs  aux_llm.rs  blueprint_resolver.rs  constitution.rs  context.rs  context_compressor.rs  delegation.rs  drift.rs  error.rs  feedback.rs  lib.rs  meter.rs  observability.rs  prompt_assembler.rs  provenance.rs  recording_trigger.rs  spatial_provider.rs  trust_evaluator.rs  world_model_verifier.rs
crates/roz-agent/tests/: agent_loop.rs  anthropic_response_schema.rs  bt_agent_loop.rs  e2e_code_execution.rs  e2e_delegation.rs  e2e_teams.rs  e2e_vertical.rs  e2e_wave_arm.rs  gemini_response_schema.rs  integration_vertical.rs  memory_store_postgres.rs  openai_provider.rs  paig_integration.rs  phase4_vertical.rs  safety_integration.rs  skill_tools_integration.rs  tools_memory.rs  turn_emitter_integration.rs
crates/roz-bench/: Cargo.toml
crates/roz-bench/benches/: dual_publish_fanout.rs  execute_code_roundtrip.rs  signed_envelope.rs  zenoh_local_pubsub.rs
crates/roz-bench/src/: lib.rs
crates/roz-cli/: Cargo.toml  build.rs
crates/roz-cli/src/: banner.ansi  cli.rs  config.rs  lib.rs  main.rs  output.rs  render.rs
crates/roz-cli/tests/: auth_collapse.rs  device_rotate.rs  e2e_headless.rs  headless_tools.rs  integration.rs  mcap_to_rrd.rs  schedule.rs  session_bundle_export_live.rs  skill_e2e_smoke.rs
crates/roz-copper/: Cargo.toml  build.rs  copperconfig.ron
crates/roz-copper/src/: app.rs  bridge.rs  channels.rs  ci.rs  controller.rs  controller_adapter.rs  controller_lifecycle.rs  deployment_manager.rs  evidence_archive.rs  evidence_collector.rs  fake_manipulator.rs  fake_openclaw.rs  gazebo_cmd.rs  gazebo_sensor.rs  handle.rs  io.rs  io_factory.rs  io_grpc.rs  io_log.rs  io_ws.rs  latch.rs  lib.rs  manifest.rs  mcap_export.rs  policy.rs  replay.rs  safety_filter.rs  state_injector.rs  tasks.rs  tick_builder.rs  tick_contract.rs  tick_dispatch.rs  wasm.rs  wit_bindings.rs  wit_host.rs
crates/roz-copper/tests/: ardupilot_wasm_velocity.rs  drone_wasm_velocity.rs  e2e_wasm_actuator_bridge.rs  e2e_wasm_to_gazebo.rs  fake_manipulator_tick_loop.rs  fake_openclaw_tick_loop.rs  gazebo_docker_integration.rs  gazebo_grpc_integration.rs  latched_estop.rs  live_controller_support.rs  mobile_wasm_cmd_vel.rs  phase24_policy_tick_clamp.rs  sec05_scope_boundary.rs  send_joint_command_test.rs  ur5_joint_command.rs  wasm_signature_integration.rs  wit_host_bounds.rs
crates/roz-copper/wit/: controller.wit
crates/roz-core/: Cargo.toml
crates/roz-core/src/: adapter.rs  agent_event_hook.rs  auth.rs  blueprint.rs  camera.rs  capabilities.rs  channels.rs  checkpoint_signal.rs  clock.rs  command.rs  degradation.rs  edge_health.rs  env_config.rs  errors.rs  experiment.rs  frames.rs  hazards.rs  interfaces.rs  json_repair.rs  key_provider.rs  lease.rs  lib.rs  manifest.rs  matching.rs  memory.rs  messages.rs  model_endpoint.rs  phases.rs  primitives.rs  provenance.rs  reconnect.rs  recording.rs  recovery.rs  safety.rs  schedule.rs  spatial.rs  tasks.rs  team.rs  thinking.rs  timebase.rs  (+4 more)
crates/roz-core/tests/: phase4_integration.rs  signing_golden_vectors.rs
crates/roz-db/: Cargo.toml
crates/roz-db/src/: activity_events.rs  agent_memory.rs  agent_sessions.rs  api_keys.rs  commands.rs  device_codes.rs  device_keys.rs  device_trust.rs  embodiments.rs  environments.rs  hosts.rs  leases.rs  lib.rs  mcap_archives.rs  mcp_servers.rs  message_feedback.rs  model_endpoints.rs  provenance.rs  safety_audit.rs  safety_policies.rs  scheduled_tasks.rs  server_signing_state.rs  session_artifacts.rs  session_metadata.rs  session_turns.rs  skills.rs  streams.rs  tasks.rs  tenant.rs  triggers.rs  usage.rs  user_model_facts.rs
crates/roz-db/tests/: agent_memory.rs  device_keys_dao.rs  device_keys_migration.rs  mcp_servers_integration.rs  model_endpoints_integration.rs  rls_isolation.rs  scheduled_tasks_integration.rs  session_turns_fts.rs  session_turns_integration.rs  skills_integration.rs  user_model_facts.rs
crates/roz-local/: Cargo.toml
crates/roz-local/src/: builtin_skills.rs  docker.rs  event_renderer.rs  lib.rs  manifest.rs  mcp.rs  registry.rs  runtime.rs  session.rs  spatial_docker.rs
crates/roz-local/tests/: docker_sim_integration.rs  live_claude_multiturn.rs  live_claude_sim.rs  live_claude_wasm.rs  live_claude_wasm_containers.rs  live_claude_wasm_gazebo.rs  live_mode_switch.rs  mcp_live_integration.rs  mcp_move_arm.rs  runtime_registers_live_and_replay.rs  runtime_tests.rs
crates/roz-mavlink/: Cargo.toml
crates/roz-mavlink/src/: backend.rs  flight_command.rs  lib.rs  log_download.rs  mav_result.rs  readiness.rs  signing.rs
crates/roz-mavlink/tests/: autopilot_kind.rs  compliance.rs  log_fanout.rs  mock_log_transport_unit.rs  px4_fixture_record_verify.rs  px4_readiness_replay.rs  qgc_coexistence.rs  readiness_replay.rs  send_log_erase.rs  ulog_download_integration.rs
crates/roz-mcp/: Cargo.toml
crates/roz-mcp/src/: client.rs  health.rs  lib.rs  oauth.rs  registry.rs
crates/roz-nats/: Cargo.toml
crates/roz-nats/src/: dispatch.rs  events.rs  leaf.rs  lib.rs  operator.rs  provisioning.rs  subjects.rs  team.rs  trace.rs
crates/roz-nats/tests/: integration.rs
crates/roz-openai/: Cargo.toml
crates/roz-openai/prompts/: gpt_5_1_codex_max_prompt.md  gpt_5_1_prompt.md  gpt_5_2_codex_prompt.md  gpt_5_2_prompt.md  gpt_5_codex_prompt.md
crates/roz-openai/src/: client.rs  error.rs  lib.rs  prompts.rs  provider_info.rs  sse.rs  transform.rs
crates/roz-openai/tests/: chat_wire.rs  client_stream.rs  fixtures_inventory.rs  live_smoke.rs  oauth_flow.rs  responses_wire.rs  sse_parser.rs
crates/roz-proto/: Cargo.toml  build.rs
crates/roz-proto/src/: lib.rs
crates/roz-safety/: Cargo.toml
crates/roz-safety/src/: commands.rs  (+6 more)
crates/roz-server/: Cargo.toml  build.rs
crates/roz-test/: Cargo.toml
crates/roz-worker/: Cargo.toml  build.rs
crates/roz-zenoh/: Cargo.toml
(+801 files in other folders)
