[workspace]
resolver = "2"
members = [
    "crates/roz-core",
    "crates/roz-db",
    "crates/roz-nats",
    "crates/roz-server",
    "crates/roz-worker",
    "crates/roz-agent",
    "crates/roz-safety",
    "crates/roz-cli",
    "crates/roz-test",
    "crates/roz-copper",
    "crates/roz-zenoh",
    "crates/roz-local",
]

[workspace.package]
version      = "0.2.0"
edition      = "2024"
rust-version = "1.92.0"
license      = "Apache-2.0"
authors      = ["Bedrock Dynamics <hello@bedrockdynamics.com>"]
repository   = "https://github.com/BedrockDynamics/roz"
description  = "Physical AI agent runtime — LLM agents write WASM code to control real robots"
keywords     = ["robotics", "agent", "llm", "wasm", "safety"]
categories   = ["science::robotics", "simulation"]

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "request-id", "util"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "json", "migrate"] }

# Edge transport (Phase 15)
zenoh = "1.8"
flume = "0.11"

# NATS
async-nats = "0.38"
nkeys = "0.4"
nats-io-jwt = "0.1"
bytes = "1"

# Auth
jsonwebtoken = "9"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
figment = { version = "0.10", features = ["env", "toml"] }
sha2 = "0.10"
rand = "0.8"
base64 = "0.22"
ciborium = "0.2"
reqwest = { version = "0.12", features = ["json"] }
hex = "0.4"
async-trait = "0.1"

# Phase 2 additions
governor = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
rmp-serde = "1"
parking_lot = "0.12"
restate-sdk = "0.9"

# Phase 3 additions — Auth
svix = "1"
oauth2 = "5"
keyring = "3"
directories = "6"

# Phase 3 additions — Triggers
cron = "0.15"

# Phase 3 additions — CLI
tabled = "0.20"
owo-colors = "4"
indicatif = "0.17"
tokio-tungstenite = "0.28"
serde_yaml = "0.9"
toml = "0.8"
webbrowser = "1"

# Phase 3 additions — Streams
mcap = "0.24"

# Phase 4a additions
reqwest-eventsource = "0.6"
futures = "0.3"
futures-core = "0.3"
async-stream = "0.3"
tokio-stream = "0.1"
logfire = "0.9"

# Phase 4b additions — testcontainers + Restate
testcontainers = "0.27"
testcontainers-modules = { version = "0.15", features = ["postgres", "nats"] }
restate-sdk-testcontainers = "0.9"

# Phase 5 additions — Typed tool dispatch
schemars = "1"

# gRPC
tonic = "0.13"
prost = "0.13"
prost-types = "0.13"
tonic-build = "0.13"
tonic-reflection = "0.13"
tokio-util = "0.7"
rmcp = { version = "1", default-features = false, features = ["client", "transport-streamable-http-client-reqwest"] }
tempfile = "3"
arc-swap = "1"

# Phase 4 additions — Skills, Sim-to-Real, DeviceTrust
regex = "1"
nalgebra = "0.33"
ed25519-dalek = { version = "2", features = ["rand_core"] }
crc32fast = "1"

# Phase 4 additions — Camera + WebRTC
str0m = "0.17"
openh264 = "0.9"
v4l = "0.14"
inotify = "0.11"
viuer = "0.11"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery  = { level = "warn", priority = -1 }

# Selective relaxations for Roz patterns
module_name_repetitions = "allow"
missing_errors_doc      = "allow"
missing_panics_doc      = "allow"
must_use_candidate      = "allow"
redundant_pub_crate     = "allow"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.metadata.release]
shared-version = true
tag-name = "v{{version}}"
tag-message = "Release v{{version}}"
pre-release-commit-message = "chore: release v{{version}}"
publish = false

# Fast iteration: deps optimized, app debug
[profile.fastdev]
inherits = "dev"
[profile.fastdev.package."*"]
opt-level = 2

# Distribution: full LTO
[profile.release-lto]
inherits = "release"
lto = "fat"
codegen-units = 1
strip = true
