[package]
name = "roz-agent"
version.workspace = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true

[dependencies]
roz-core = { path = "../roz-core" }
roz-copper = { path = "../roz-copper", default-features = false }
roz-db = { path = "../roz-db" }
roz-nats = { path = "../roz-nats" }
roz-openai = { path = "../roz-openai" }
secrecy = { workspace = true }
sqlx = { workspace = true }
async-trait.workspace = true
async-nats.workspace = true
tokio = { workspace = true, features = ["full"] }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
parking_lot.workspace = true
sha2.workspace = true
hex.workspace = true
chrono.workspace = true
toml.workspace = true
uuid.workspace = true
reqwest = { workspace = true }
reqwest-eventsource.workspace = true
eventsource-stream = "0.2"
anyhow.workspace = true
thiserror.workspace = true
futures.workspace = true
futures-core.workspace = true
async-stream.workspace = true
tokio-stream.workspace = true
schemars.workspace = true
tokio-util.workspace = true
object_store = { workspace = true }
semver = { workspace = true }
rhai = { version = "1", features = ["serde"] }
quick-js = "0.4"

[dev-dependencies]
crc32fast = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
mockito = "1"
wiremock = { workspace = true }
bytes = { workspace = true }
tempfile = { workspace = true }
roz-local = { path = "../roz-local" }
roz-copper = { path = "../roz-copper", default-features = false }
roz-test = { path = "../roz-test" }

[lints]
workspace = true
