[package]
name = "roz-cli"
version.workspace = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true

[lib]
name = "roz_cli"
path = "src/lib.rs"

[[bin]]
name = "roz"
path = "src/main.rs"

[dependencies]
roz-core = { path = "../roz-core" }
roz-agent = { path = "../roz-agent" }
roz-local = { path = "../roz-local" }
roz-openai = { path = "../roz-openai" }
roz-copper = { path = "../roz-copper", default-features = false }
roz-worker = { path = "../roz-worker" }
chrono = { workspace = true }
secrecy = { workspace = true }
arc-swap.workspace = true
clap = { workspace = true, features = ["env"] }
tokio = { workspace = true, features = ["full"] }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
anyhow.workspace = true
reqwest.workspace = true
tabled.workspace = true
owo-colors.workspace = true
indicatif.workspace = true
tokio-tungstenite.workspace = true
futures = "0.3"
hex = { workspace = true }
keyring.workspace = true
directories.workspace = true
webbrowser.workspace = true
rand.workspace = true
base64.workspace = true
uuid.workspace = true
toml.workspace = true
tracing.workspace = true
sha2 = "0.10"
hostname = "0.4"
iocraft = "0.8"
smol = "2"
unicode-width = "0.1"
dialoguer = "0.11"
regex = { workspace = true }
crossterm = "0.28"
async-channel = "2"
async-trait.workspace = true
reqwest-eventsource.workspace = true
futures-core.workspace = true
tonic = { workspace = true, features = ["channel", "transport", "tls-ring", "tls-native-roots"] }
prost.workspace = true
prost-types.workspace = true
tokio-stream.workspace = true
tar.workspace = true
flate2.workspace = true
walkdir = "2"
# Phase 26.9 D-19 — MCAP reader for `roz mcap to-rrd`. Production dep (not
# dev-only) because `commands::mcap::*` consumes `mcap::MessageStream` in
# shipped code.
mcap = { workspace = true }
# Phase 26.9 D-02 — bulk-mode glob expansion for `roz mcap to-rrd --bulk`.
glob = { workspace = true }
# Phase 26.9 D-16 — Rerun .rrd writer, gated behind feature `export-rrd`.
# default-features = false disables viewer/server/web stack (~60% of deps).
# Feature set per RESEARCH §Topic 2: `sdk` mandatory, `data_loaders` + `log`
# optional-but-retained for future read-side smoke paths and tracing-log
# routing.
rerun = { workspace = true, optional = true, default-features = false, features = ["sdk", "data_loaders", "log"] }

[features]
# Phase 26.9 D-16 — optional Rerun .rrd export. Off by default — pulls in
# the rerun SDK (~50 deps with default-features=false). Distributors enable
# via `cargo install --features export-rrd`. Per D-15 the rerun crate is
# pinned exact at the workspace level to match substrate's bundled viewer.
export-rrd = ["dep:rerun"]

[build-dependencies]
tonic-build.workspace = true

[dev-dependencies]
tempfile = "3"
serial_test = { workspace = true }

[lints]
workspace = true
