[package]
name = "roz-copper"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = []
# Enable the copper_runtime macro-generated app and CI modules.
copper-runtime = []
# Enable AOT (ahead-of-time) WASM compilation via Module::deserialize.
aot = []
# Enable Gazebo simulation bridge (PoseV → EntityState conversion).
gazebo = ["gz-transport-rs"]

[dependencies]
gz-transport-rs = { version = "0.1", optional = true }
arc-swap = "1"
cu29 = "0.14"
cu29-derive = "0.14"
cu29-helpers = "0.14"
cu29-unifiedlog = "0.14"
mcap.workspace = true
prost = "0.13"
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tonic = { workspace = true, features = ["channel", "transport"] }
tokio-stream = "0.1"
uuid.workspace = true
roz-nats = { path = "../roz-nats" }
roz-core = { path = "../roz-core" }
parking_lot.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-tungstenite.workspace = true
futures.workspace = true
anyhow.workspace = true
chrono.workspace = true
hex.workspace = true
sha2.workspace = true
tracing.workspace = true
wasmtime = { version = "43", features = ["component-model"] }
wat = "1.245.1"
wit-component = { version = "0.244.0", features = ["dummy-module"] }
wit-parser = "0.244.0"

[dev-dependencies]
tempfile = "3"
wasmprinter = "0.245.1"

[build-dependencies]
tonic-build = { workspace = true }

# Feature-gate the Gazebo Docker integration test so it only compiles with --features gazebo.
[[test]]
name = "gazebo_docker_integration"
required-features = ["gazebo"]

[[test]]
name = "gazebo_grpc_integration"
required-features = ["gazebo"]

[lints]
workspace = true
