[package]
name = "roz-core"
version.workspace = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
cron = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
async-trait = { workspace = true }

# Phase 4 — Skills, Sim-to-Real, DeviceTrust
regex = { workspace = true }
nalgebra = { workspace = true }
ed25519-dalek = { workspace = true }
crc32fast = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
hex = "0.4"

# Phase 18 — Skills as artifacts (frontmatter semver validation)
semver = { workspace = true }

# Phase 19 — Open-weight model path (model_endpoint credential redaction)
secrecy = { workspace = true }

# Phase 19 Plan 03 — KeyProvider (AES-256-GCM)
aes-gcm = { workspace = true }
zeroize = { workspace = true }
base64 = { workspace = true }

# Phase 19 Plan 04 — EndpointRegistry (TOML config loader)
figment = { workspace = true }

[dev-dependencies]
crc32fast = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
tempfile = { workspace = true }
serial_test = { workspace = true }

[lints]
workspace = true
