[package]
name = "roz-core"
version.workspace = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true

[features]
# Phase 26.10 Plan 08 (FW-07) — exposes `embodiment::test_fixtures::manipulator_runtime`
# helper so other crates (roz-copper, roz-worker) can build minimal `EmbodimentRuntime`
# instances in their own tests without copying the construction code. Gated `cfg(any(test,
# feature = "test-fixtures"))` so production binaries never link the helper.
test-fixtures = []

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
cron = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
opentelemetry = { workspace = true }
tracing-opentelemetry = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
async-trait = { workspace = true }

# Phase 4 — Skills, Sim-to-Real, DeviceTrust
regex = { workspace = true }
nalgebra = { workspace = true }
ed25519-dalek = { workspace = true }
crc32fast = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
hex = "0.4"

# Phase 18 — Skills as artifacts (frontmatter semver validation)
semver = { workspace = true }

# Phase 19 — Open-weight model path (model_endpoint credential redaction)
secrecy = { workspace = true }

# Phase 19 Plan 03 — KeyProvider (AES-256-GCM)
aes-gcm = { workspace = true }
zeroize = { workspace = true }
base64 = { workspace = true }

# Phase 19 Plan 04 — EndpointRegistry (TOML config loader)
figment = { workspace = true }

# Phase 23 — Signed dispatch (JCS canonicalization for Ed25519 envelopes)
serde_json_canonicalizer = { workspace = true }

[dev-dependencies]
crc32fast = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
tempfile = { workspace = true }
serial_test = { workspace = true }

[lints]
workspace = true
