[package]
name = "roz-db"
version.workspace = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true

[dependencies]
roz-core = { path = "../roz-core" }
sqlx = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
roz-test = { path = "../roz-test" }

[lints]
workspace = true
