[package]
name = "roz-local"
version.workspace = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true

[dependencies]
roz-core   = { path = "../roz-core" }
roz-agent  = { path = "../roz-agent" }
roz-copper = { path = "../roz-copper", default-features = false }
async-trait.workspace = true
serde.workspace     = true
serde_json.workspace = true
toml.workspace      = true
tokio.workspace     = true
uuid.workspace      = true
chrono.workspace    = true
hex.workspace       = true
sha2.workspace      = true
tracing.workspace   = true
thiserror.workspace = true
reqwest.workspace   = true
schemars.workspace  = true
arc-swap.workspace  = true
directories.workspace = true
parking_lot.workspace = true
rmcp = { workspace = true }
tokio-util.workspace = true

[dev-dependencies]
tempfile.workspace = true
tonic.workspace = true

[lints]
workspace = true
