[package]
name = "roz-nats"
version.workspace = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true

[dependencies]
roz-core = { path = "../roz-core" }
async-nats = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
opentelemetry = "0.30"
tracing-opentelemetry = "0.31"
nkeys = { workspace = true }
nats-io-jwt = { workspace = true }
bytes = { workspace = true }

[dev-dependencies]
roz-test = { path = "../roz-test" }
tokio = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
futures = "0.3"

[lints]
workspace = true
