[package]
name         = "roz-openai"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true

[lints]
workspace = true

[dependencies]
roz-core = { path = "../roz-core" }
tokio = { workspace = true }
reqwest = { workspace = true, features = ["stream"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
async-stream = { workspace = true }
futures = { workspace = true }
figment = { workspace = true }
secrecy = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
eventsource-stream = "0.2"
bytes = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
webbrowser = { workspace = true }
url = { workspace = true }

[dev-dependencies]
wiremock = { workspace = true }
serial_test = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
