[package]
name = "roz-server"
version.workspace = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true

[dependencies]
roz-core = { path = "../roz-core" }
roz-db = { path = "../roz-db" }
roz-nats = { path = "../roz-nats" }
roz-agent = { path = "../roz-agent" }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
logfire = { workspace = true }
figment = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
async-nats = { workspace = true }
bytes = { workspace = true }
base64 = { workspace = true }
governor = { workspace = true }
restate-sdk = { workspace = true }
parking_lot = { workspace = true }
rand = { workspace = true }
cron = { workspace = true }
tonic = { workspace = true, features = ["tls-native-roots", "tls-ring"] }
prost = { workspace = true }
prost-types = { workspace = true }
tonic-reflection = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
eventsource-stream = "0.2"

[build-dependencies]
tonic-build = { workspace = true }

[dev-dependencies]
roz-test = { path = "../roz-test" }
roz-worker = { path = "../roz-worker" }
roz-copper = { path = "../roz-copper", default-features = false }
roz-local = { path = "../roz-local" }
nkeys = { workspace = true }
proptest = "1.6"

[lints]
workspace = true
